[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://menus/MultiplayerModeSelection.gd" id="1"]

[node name="MultiplayerModeSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="MultiplayerButtons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="LocalMultiplayerButton" type="Button" parent="CenterContainer/VBoxContainer/MultiplayerButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Local Multiplayer (Hot-seat)"

[node name="NetworkMultiplayerButton" type="Button" parent="CenterContainer/VBoxContainer/MultiplayerButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Network Multiplayer (Online)"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="DescriptionContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionTitle" type="Label" parent="CenterContainer/VBoxContainer/DescriptionContainer"]
layout_mode = 2
text = "Description:"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="CenterContainer/VBoxContainer/DescriptionContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "Hot-seat multiplayer on the same device. Players take turns using the same computer."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Back to Main Menu"